@@ -90,8 +90,9 @@ public class EndToEndEvaluation {
                     GrobidAnalysisConfig.builder()
                             .consolidateHeader(1)
                             .consolidateCitations(0)
+                            .consolidateFunders(0)
                             .withPreprocessImages(true)
-//                            .withSentenceSegmentation(true)
+                            .withSentenceSegmentation(false)
                             .build();
 				String tei = engine.fullTextToTEI(this.pdfFile, config);
 				// write the result in the same directory
@@ -115,7 +116,7 @@ public class EndToEndEvaluation {
             	}
         	}
 
-            return new Boolean(success);
+            return Boolean.valueOf(success);
         } 
     } 
 
@@ -1191,10 +1192,10 @@ public class EndToEndEvaluation {
 										String localId = theIds[j];
 										localId = localId.replace("#", "");
 										if (refCalloutRefIds.get(localId) == null)
-											refCalloutRefIds.put(localId, new Integer(1));
+											refCalloutRefIds.put(localId,Integer.valueOf(1));
 										else {
 											int val = refCalloutRefIds.get(localId).intValue();
-											refCalloutRefIds.put(localId, new Integer(val+1));
+											refCalloutRefIds.put(localId, Integer.valueOf(val+1));
 										}
 										totalExpectedCitations++;
 									}
@@ -1210,10 +1211,10 @@ public class EndToEndEvaluation {
 								localId = localId.replace("#", "");
 								if ( (localId != null) && (localId.length()>0) ) {
 									if (grobidCalloutRefIds.get(localId) == null)
-										grobidCalloutRefIds.put(localId, new Integer(1));
+										grobidCalloutRefIds.put(localId, Integer.valueOf(1));
 									else {
 										int val = grobidCalloutRefIds.get(localId).intValue();
-										grobidCalloutRefIds.put(localId, new Integer(val+1));
+										grobidCalloutRefIds.put(localId, Integer.valueOf(val+1));
 									}
 									totalObservedCitations++;
 								}
